# taq-llag-analysis

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml  pytest.ini  ruff.toml  setup.py  ty.toml
.devcontainer/: Dockerfile  devcontainer.json
data/: README.md
documents/: pair_summary_csv_description_ja.md
notebooks/: contrast.py  cross_k.py  cross_k_sum_share_rd_250.py  cross_k_sum_share_round_lot.py  cross_k_sum_share_round_lot_crossk_only.py  download_sta_csv.py  filter_round_lot_10_trade_20251103.py  filtered_trade_quote_inventory.py  m_trade_quote_mode_results.py  m_trade_quote_mode_symbol_panel.py  m_trade_quote_rd_250.py  m_trade_quote_round_lot_change.py  m_trade_quote_round_lot_change_with_mean_close.py  m_trade_quote_round_lot_effects.py  round_lot.py  round_lot_10_cpcf_qz.py  trade_quote_lead_lag.py  trade_quote_mode_distribution.py  trade_quote_mode_symbol_panel.py
reports/20260408_RD/: main.aux  (+2 more)
src/: bench_daily_taq_bbo_filter_parquet.py  daily_taq_quote_filter.py  daily_taq_trade_filter.py  write_filtered_quote_parquet.py  write_filtered_trade_parquet.py  write_m_trade_quote_cpcf_examples.py  write_m_trade_quote_mode_summary.py  write_m_trade_quote_parquets.py  write_yfinance_avg_close_table.py
tests/: test__daily_taq_bbo_filter_parquet.py  test__daily_taq_trade_filter.py  test__preprocess_refactor.py  test__trade_quote_cpcf_examples.py  test__trade_quote_mode_summary.py  test__write_m_trade_quote_mode_summary.py  test__write_trade_quote_cpcf_examples.py  test__write_trade_quote_mode_summary.py  test__write_yfinance_avg_close_table.py
(+231 files in other folders)
