[project]
name = "2026-py-template"
requires-python = "==3.13.*"
classifiers = ["Programming Language :: Python :: Implementation :: CPython"]
dynamic = ["version"]
dependencies = [
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "joblib>=1.5.3",
    "marimo>=0.23.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.2",
    "polars>=1.38.1",
    "ppllag",
    "pyarrow>=23.0.1",
    "pyzmq>=27.1.0",
    "rddensity>=2.4.6",
    "rdrobust>=1.3.0",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
    "yfinance>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
 "ruff>=0.9.2",
 "setuptools>=82.0.1",
 "ty>=0.0.14",
]

[tool.uv.sources]
ppllag = { git = "https://github.com/shtmjp/ppllag.git" }
